--- a/README.rdoc
+++ b/README.rdoc
@@ -3,7 +3,7 @@
 
 Let's say you don't support IE6 and want to prevent IE6 users from accessing to your Rails app. 
 
-You're in luck. Just add this to your +environment.rb+ file
+You're in luck. Just add this to your <tt>environment.rb</tt> file
 
   config.gem "bebanjo-rack-useragent", :lib => "rack/user_agent", :source => "http://gems.github.com"
   
@@ -15,15 +15,15 @@ And, of course, install the gem:
 
   $ [sudo] rake gems:install
   
-Done! From now on users with IE version lower than 7.0 will get a nice error message saying that their browsers need to be updated... Ok, ok, not so nice message, you can personalize it by putting an +upgrade.html+ file inside the +/public+ directory of your application.
+Done! From now on users with IE version lower than 7.0 will get a nice error message saying that their browsers need to be updated... Ok, ok, not so nice message, you can personalize it by putting an <tt>upgrade.html</tt> file inside the <tt>/public</tt> directory of your application.
 
 -- Hey, I need to show localized versions of the message to my french and spanish users! 
 
-No problem, just add +upgrade.es.html+ and +upgrade.fr.html+ to +/public+ (+rack.locale+ env variable needs to be set for this to work. +Rack::Locale+ in rack-contrib[http://github.com/rack/rack-contrib] can do that)
+No problem, just add <tt>upgrade.es.html</tt> and <tt>upgrade.fr.html</tt> to <tt>/public</tt> (<tt>rack.locale</tt> env variable needs to be set for this to work. <tt>Rack::Locale</tt> in rack-contrib[http://github.com/rack/rack-contrib] can do that)
 
 -- Cool!, what about something more dynamic... like ERB?
 
-Granted! You'll have to add to the config which template to use. In +environment.rb+:
+Granted! You'll have to add to the config which template to use. In <tt>environment.rb</tt>:
 
   config.middleware.use "Rack::UserAgent::Filter", [
     {:browser => "Internet Explorer", :version => "7.0"}
@@ -35,7 +35,7 @@ Then you could show the browser version as part of your message:
   
 -- Can I use it with non-Rails Rack frameworks, like Sinatra?
 
-Sure. You only have to take into account that you'll always have to set which template to use. i.e: In +config.ru+:
+Sure. You only have to take into account that you'll always have to set which template to use. i.e: In <tt>config.ru</tt>:
 
   require 'rack/user_agent'
   
